refactored auth to have seperate blueprint for User operations

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,7 +34,7 @@
                         {% if current_user.is_authenticated %}
                             {{ render_nav_item('auth.dashboard','Dashboard' ) }}
                             {% if current_user.is_admin %}
-                                {{ render_nav_item('auth.browse_users','User Management' ) }}
+                                {{ render_nav_item('user_operations.browse_users','User Management' ) }}
                             {% endif %}
 
                         {% else %}
